# ai_rs

./: Cargo.toml  publish.sh  readme.md
examples/: gemini.rs  main.rs  ollama.rs  ollama_stream.rs
src/: lib.rs
src/gemini/: client.rs  mod.rs  types.rs
src/ollama/: client.rs  mod.rs  types.rs
